--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,79 @@
+!.gitignore
+
+# ------------------------------------------------------
+
+##### IDEs/Editores
+### Visual Studio Code / VS Codium
+.vscode/*
+.vscode/
+.code/
+.code/*
+#!.vscode/settings.json
+#!.vscode/tasks.json
+#!.vscode/launch.json
+#!.vscode/extensions.json
+#!.vscode/*.code-snippets
+.history/
+*.vsix
+.vs/
+ipch/
+*.cachefile
+*.VC.db
+*.VC.VC.opendb
+*.vsp
+*.vspx
+*.sap
+# files ending in .cache can be ignored
+*.[Cc]ache
+# but keep track of directories ending in .cache
+!*.[Cc]ache/
+*.plg
+*.opt
+*.vbw
+_Pvt_Extensions
+### Jetbrains
+.idea/
+.idea/*
+*.sln.iml
+*.iml
+*.ipr
+cmake-build-*/
+*.iws
+#out/
+.idea_modules/
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+#fabric.properties
+
+# ------------------------------------------------------
+
+##### Python
+__pycache__/
+*.pyc
+
+# ------------------------------------------------------
+
+##### Ambiente virtual
+.Python
+#[Bb]in
+#[Ii]nclude
+#[Ll]ib
+#[Ll]ib64
+#[Ll]ocal
+#[Ss]cripts
+pyvenv.cfg
+venv/
+.venv
+.venv/
+pip-selfcheck.json
+
+# ------------------------------------------------------
+
 Datos/
 Antiguo/
 Programas Assembly Testeo/
 Programas Assembly Enunciados/
 test/
-.idea
+
+# ------------------------------------------------------
